--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.9",
         "laravel/horizon": "^5.27",
         "laravel/pulse": "^1.2",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/laravel-health": "^1.30"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
