--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/horizon": "^5.27",
         "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
+        "sentry/sentry-laravel": "^4.7",
         "spatie/laravel-health": "^1.30"
     },
     "require-dev": {
