--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/telescope": "^5.1",
         "laravel/tinker": "^2.9",
         "sentry/sentry-laravel": "^4.7",
-        "spatie/laravel-health": "^1.30"
+        "spatie/laravel-health": "^1.30",
+        "wendelladriel/laravel-lift": "^0.14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
