--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "wendelladriel/laravel-lift": "^0.14.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
+        "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^2.9",
         "laravel/pint": "^1.13",
