--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "laravel/telescope": "^5.1",
         "laravel/tinker": "^2.9",
         "sentry/sentry-laravel": "^4.7",
-        "spatie/laravel-health": "^1.30",
-        "wendelladriel/laravel-lift": "^0.14.1"
+        "spatie/laravel-health": "^1.30"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
