--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/pulse": "^1.2",
         "laravel/telescope": "^5.1",
         "laravel/tinker": "^2.9",
+        "livewire/volt": "^1.6",
         "michiruf/laravel-ide-helper-companion": "^0.2-rc1",
         "sentry/sentry-laravel": "^4.7",
         "spatie/laravel-health": "^1.30"
